fixed issue with footer links not showing up on mobile. Modified footer text relative lengths to relative % of parent element.

--- a/static/dataset_styles.css
+++ b/static/dataset_styles.css
@@ -43,9 +43,9 @@ white-space: normal;
 /* ----- footer styles -----*/
 
 #foot {
-    padding-bottom: 20px;
-    padding-top: 10px;
-    font-size: 15px;
+    padding-bottom: 4%;
+    padding-top: 1%;
+    font-size: 105%;
     color: #a29ea6;
 }
 
